config/flask-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  selector:
    app: flask-app
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: flask-app-image:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: logs
              mountPath: /app/logs
            - name: config 
              mountPath: /app/config/app-config.json
              subPath: app-config.json  
      volumes:
        - name: logs
          emptyDir: {}
        - name: config
          configMap:
            name: flask-app-config
